Table startup {
  id int [pk, increment]
  name varchar [not null]
  description text
  founded_at date
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table founder {
  id int [pk, increment]
  first_name varchar [not null]
  last_name varchar [not null]
  email varchar [not null, unique]
  gender gender [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table partner {
  id int [pk, increment]
  first_name varchar [not null]
  last_name varchar [not null]
  email varchar [not null, unique]
  gender gender [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table deal {
  id int [pk, increment]
  startup_id int [not null]
  round varchar
  amount decimal
  deal_date date
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table industry {
  id int [pk, increment]
  name varchar [not null, unique]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table startup_founder {
  startup_id int [not null]
  founder_id int [not null]
  indexes {
    (startup_id, founder_id) [pk]
  }
}

Table partner_deal {
  partner_id int [not null]
  deal_id int [not null]
  indexes {
    (partner_id, deal_id) [pk]
  }
}

Table startup_industry {
  startup_id int [not null]
  industry_id int [not null]
  indexes {
    (startup_id, industry_id) [pk]
  }
}

Ref: startup_founder.startup_id > startup.id
Ref: startup_founder.founder_id > founder.id
Ref: partner_deal.partner_id > partner.id
Ref: partner_deal.deal_id > deal.id
Ref: startup_industry.startup_id > startup.id
Ref: startup_industry.industry_id > industry.id
Ref: deal.startup_id > startup.id

Enum gender {
  male
  female
  non_binary
  other
}